# hello_python_uv

./: .dockerignore  .gitignore  .hadolint.yaml  .pytest.ini  .ruff.toml  Dockerfile  Dockerfile.dev  Dockerfile.release  README.md  hello.py  prime.py  pyproject.toml  pyrightconfig.json  renovate.json
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: hadolint.yml  ruff.yml  test.yml
doc/: DOCKER.md
examples/: f.py  ffmpeg-support.py  use-git-library.py  use-stackprinter.py
scripts/: cow.py  hello-args.py  hello-numpy.py  use-stackprinter.py
src/: event.py  func.py
tests/: test_event.py  test_prime.py
